--- a/isotropic.html
+++ b/isotropic.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <link rel="icon" type="image/x-icon" href="../visualise/resources/favicon.ico">
-        <link rel="stylesheet" href="css/main.css">
+        <!-- <link rel="stylesheet" href="css/main.css"> -->
         <script type="text/javascript" src="https://franzzzzzzzz.github.io/NDDEM/deploy/DEMCGND.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,6 @@
 	</head>
 	<body>
     <div id="canvas"></div>
-		<script type="module" src='./dist/isotropic-bundle.js'></script>
+		<script type="module" src='dist/isotropic-bundle.js'></script>
 	</body>
 </html>
