got buttons working

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	</head>
 	<body>
     <div id="canvas"></div>
-		<script type="module" src='dist/index-bundle.js'></script>
+		<!-- <script type="module" src='dist/index-bundle.js'></script> -->
+    <!-- <script type="module">import main from "dist/index-bundle.js";</script> -->
 	</body>
 </html>
