--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <link rel="icon" type="image/x-icon" href="../visualise/resources/favicon.ico">
         <!-- <link rel="stylesheet" href="css/main.css"> -->
-        <script type="text/javascript" src="https://franzzzzzzzz.github.io/NDDEM/deploy/DEMCGND.js"></script>
+        <!-- <script type="text/javascript" src="https://franzzzzzzzz.github.io/NDDEM/deploy/DEMCGND.js"></script> -->
+        <script type="text/javascript" src="dist/DEMCGND.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
