--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <link rel="icon" type="image/x-icon" href="../visualise/resources/favicon.ico">
-        <!-- <link rel="stylesheet" href="css/main.css"> -->
         <!-- <script type="text/javascript" src="https://franzzzzzzzz.github.io/NDDEM/deploy/DEMCGND.js"></script> -->
-        <script type="text/javascript" src="dist/DEMCGND.js"></script>
+        <script type="text/javascript" src="resources/DEMCGND.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
@@ -24,7 +23,5 @@
 	</head>
 	<body>
     <div id="canvas"></div>
-		<!-- <script type="module" src='dist/index-bundle.js'></script> -->
-    <!-- <script type="module">import main from "dist/index-bundle.js";</script> -->
 	</body>
 </html>
