--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>NDDEM in VR</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <link rel="icon" type="image/x-icon" href="../visualise/resources/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="./resources/favicon.ico">
         <!-- <script type="text/javascript" src="https://franzzzzzzzz.github.io/NDDEM/deploy/DEMCGND.js"></script> -->
         <script type="text/javascript" src="resources/DEMCGND.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
