updated text and links

--- a/extra.html
+++ b/extra.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title><%= htmlWebpackPlugin.options.title %></title>
+		<title>Extra resources for Granular VR</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <link rel="icon" type="image/x-icon" href="./resources/favicon.ico">
@@ -76,9 +76,9 @@
         <h2>Feelling unwell?</h2>
         <p>If you would like to try out this experience with a mouse and keyboard instead of a VR headset, <a href="index.html?desktop">click here</a>.</p>
         <h2>Want information about the code itself?</h2>
-        <p>NDDEM is a JavaScript library that allows you to simulate N dimensional hyperspheres using the Discrete Element Method. You can find the documentation <a href="https://github.com/franzzzzzzzz/NDDEM/">here</a>.</p>
+        <p>NDDEM is a JavaScript library that allows you to simulate N dimensional hyperspheres using the Discrete Element Method. You can find the documentation <a href="https://github.com/franzzzzzzzz/NDDEM/" target="_blank" rel="noopener noreferrer">here</a>.</p>
         <h2>More examples</h2>
-        <p><a href="education.scigem.com">Here</a> you can find some examples of NDDEM in action.</p>
+        <p><a href="https://education.scigem.com" target="_blank" rel="noopener noreferrer">Here</a> you can find some examples of NDDEM in action.</p>
         </div>
 	</body>
 </html>
